2012-08-01  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
        * Tag as TrigT1CaloMonitoring-00-12-10
        * Small fix to Lumiblock plot for Tier0.

2012-07-30  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
        * Tag as TrigT1CaloMonitoring-00-12-09
        * Coverity fixes.
        * Small fix to online Global Errors vs Lumiblock plot.

2012-07-25  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
        * Tag as TrigT1CaloMonitoring-00-12-08
        * Change OnlineTest property default back to false.

2012-07-25  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
        * Tag as TrigT1CaloMonitoring-00-12-07
        * Add more global error plots to help diagnosis.

2012-07-10  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
        * Tag as TrigT1CaloMonitoring-00-12-06
        * JobOptions update.

2012-07-06  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
        * Tag as TrigT1CaloMonitoring-00-12-05
        * Remove obsolete pedestal code from PPMSimBSMon.

2012-07-05  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
        * Tag as TrigT1CaloMonitoring-00-12-04
        * Mods to allow extended PPrStabilityMon to run on Tier0.

2012-07-03  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
        * Tag as TrigT1CaloMonitoring-00-12-03
        * Use explicit CLHEP namespace.

2012-06-12  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
        * Tag as TrigT1CaloMonitoring-00-12-02
        * Updates from Hardeep.

2012-05-28  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
        * Tag as TrigT1CaloMonitoring-00-12-01
        * Change back to tight electrons in EmEfficienciesMonTool.

2012-05-22  Patrick Rieck <rieck@physik.hu-berlin.de>
        * Tag as TrigT1CaloMonitoring-00-12-00
        * Update of PPrStabilityMon for extended monitoring.

2012-05-15  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
        * Tag as TrigT1CaloMonitoring-00-11-14
        * Fix Savannah bug #94614 - two typos in EmEfficienciesMonTool.

2012-05-14  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
        * Tag as TrigT1CaloMonitoring-00-11-13